// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UndoList 初始化 快照,无 list 数组 1`] = `
<div
  className="undo-list"
>
  <div
    className="undo-list-title"
  >
    正在进行
    <div
      className="undo-list-count"
      data-test="count"
    >
      0
    </div>
  </div>
  <ul
    className="undo-list-content"
  />
</div>
`;

exports[`UndoList 初始化 快照,有 list 数组 1`] = `
<div
  className="undo-list"
>
  <div
    className="undo-list-title"
  >
    正在进行
    <div
      className="undo-list-count"
      data-test="count"
    >
      2
    </div>
  </div>
  <ul
    className="undo-list-content"
  >
    <li
      className="undo-list-item"
      data-test="list-item"
      key="0"
      onClick={[Function]}
    >
      ddd
      <div
        className="undo-list-delete"
        data-test="delete-item"
        onClick={[Function]}
      >
        -
      </div>
    </li>
    <li
      className="undo-list-item"
      data-test="list-item"
      key="1"
      onClick={[Function]}
    >
      aaa
      <div
        className="undo-list-delete"
        data-test="delete-item"
        onClick={[Function]}
      >
        -
      </div>
    </li>
  </ul>
</div>
`;

exports[`UndoList 初始化 快照,有 list 数组并含有 input 框 1`] = `
<div
  className="undo-list"
>
  <div
    className="undo-list-title"
  >
    正在进行
    <div
      className="undo-list-count"
      data-test="count"
    >
      2
    </div>
  </div>
  <ul
    className="undo-list-content"
  >
    <li
      className="undo-list-item"
      data-test="list-item"
      key="0"
      onClick={[Function]}
    >
      ddd
      <div
        className="undo-list-delete"
        data-test="delete-item"
        onClick={[Function]}
      >
        -
      </div>
    </li>
    <li
      className="undo-list-item"
      data-test="list-item"
      key="1"
      onClick={[Function]}
    >
      <input
        autoFocus={true}
        data-test="input"
        onBlur={[Function]}
        onChange={[Function]}
        value="aaa"
      />
      <div
        className="undo-list-delete"
        data-test="delete-item"
        onClick={[Function]}
      >
        -
      </div>
    </li>
  </ul>
</div>
`;
